--- a/index.html
+++ b/index.html
@@ -110,16 +110,16 @@
 							<a href="#">Услуги</a>
 							<ul class="cbp-hssubmenu">
 								<li>
-									<a href="#"><img src="img/g_audio.png" alt="img10" /><span>Аудиролики</span></a>
+									<a href="#"><img src="images/1.png" alt="img06"/><span>Аудиролики</span></a>
 								</li>
 								<li>
-									<a href="#"><img src="img/g_tv.png" alt="img06" /><span>Озвучивание видеороликов</span></a>
+									<a href="#"><img src="images/6.png" alt="img06" /><span>Озвучивание видеороликов</span></a>
 								</li>
 								<li>
-									<a href="#"><img src="img/g_movie.png" alt="img09" /><span>Создание видеороликов</span></a>
+									<a href="#"><img src="images/9.png" alt="img09" /><span>Создание видеороликов</span></a>
 								</li>
 								<li>
-									<a href="#"><img src="img/g_gramafon.png" alt="img09" /><span>Музыкальные подложки</span></a>
+									<a href="#"><img src="images/5.png" alt="img09" /><span>Музыкальные подложки</span></a>
 								</li>
 							</ul>
 						</li>
@@ -151,7 +151,7 @@
 						</div>
 					</div>
 					<div class="col-md-9 col-sm-12">
-						<a class="palitra"><img src="img/palitra_icons.png" alt="silafm"> </a>
+						<a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
 						<p class="basictext"><span style="font-family:'RobotoBold'">Агентство Звука Сила.ФМ</span> оказывает услуги: изготовление аудиороликов и радиороликов, озвучивание видеороликов, озвучка фильмов, анимации, корпоративного видео, запись аудиорекламы, радиорекламы.
 							<br> Принцип работы &mdash; удаленное on-line сотрудничество с заказчиками аудиорекламы, видеороликов и радиороликов. Отправка заказа по электронной почте или в ЛИЧНЫЙ КАБИНЕТ. Сроки исполнения &mdash; от 1 часа до 1 рабочего дня. Заказчики &mdash; рекламные и медиабаинговые агентства, радиостанции, торговые марки и бренды, телеканалы, рекламные компании, видеостудии, интернет-компании, продакшн-студии, звукорежиссеры, рекламные и маркетинговые отделы компаний, провайдеры, кинотеатры, супермаркеты.
 						</p>
@@ -266,7 +266,7 @@
 		<div class="container">
 			<div class="row">
 				<col-md-12>
-					<a class="palitra"><img src="img/palitra_icons.png" alt="silafm"> </a>
+					<a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
 					<p class="basictext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias. Sit atque ipsam quod eaque, eius quaerat sed soluta vero minima nihil distinctio numquam autem, molestiae nobis recusandae. <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum optio totam cum expedita recusandae error iste magni voluptates, impedit maiores officia fuga inventore minus voluptate quaerat id voluptatem dolore eveniet.</span>
 						<span>Suscipit, accusantium consequatur maiores quos impedit id. Similique iure aut qui est nihil libero necessitatibus, optio at illo tenetur minima soluta ad debitis quos nulla nemo, quisquam esse obcaecati facere.</span>
 						<span>Officia ad dicta cumque quod quas voluptates odio laboriosam laudantium ducimus ipsam, inventore voluptatum eveniet aperiam vel architecto animi, veniam tenetur blanditiis sit. Explicabo commodi cum tenetur perferendis numquam, natus?</span>
