--- a/index.html
+++ b/index.html
@@ -110,16 +110,16 @@
 							<a href="#">Услуги</a>
 							<ul class="cbp-hssubmenu">
 								<li>
-									<a href="#"><img src="images/1.png" alt="img06"/><span>Аудиролики</span></a>
+									<a href="#"><img src="img/radio_g.png" alt="img06"/><span>Аудиролики</span></a>
 								</li>
 								<li>
-									<a href="#"><img src="images/6.png" alt="img06" /><span>Озвучивание видеороликов</span></a>
+									<a href="#"><img src="img/tv_g.png" alt="img06" /><span>Озвучивание видеороликов</span></a>
 								</li>
 								<li>
-									<a href="#"><img src="images/9.png" alt="img09" /><span>Создание видеороликов</span></a>
+									<a href="#"><img src="img/film_g.png" alt="img09" /><span>Создание видеороликов</span></a>
 								</li>
 								<li>
-									<a href="#"><img src="images/5.png" alt="img09" /><span>Музыкальные подложки</span></a>
+									<a href="#"><img src="img/gramafon_g.png" alt="img09" /><span>Музыкальные подложки</span></a>
 								</li>
 							</ul>
 						</li>
@@ -238,7 +238,7 @@
 						<h1 class="h1block"><i class="fa fa-check-square-o"></i> НАШИ ЦАРАПИНЫ</h1>
 						<div class="scratches clearfix">
 							<figure class="sign">
-								<p><img src="img/audio.png" alt="silafm" class="incircle"></p>
+								<p><img src="img/radio.png" alt="silafm" class="incircle"></p>
 								<figcaption>Аудиоролики</figcaption>
 							</figure>
 							<figure class="sign">
@@ -246,7 +246,7 @@
 								<figcaption>Озвучки</figcaption>
 							</figure>
 							<figure class="sign">
-								<p><img src="img/movie.png" alt="silafm" class="incircle"></p>
+								<p><img src="img/film.png" alt="silafm" class="incircle"></p>
 								<figcaption>Видеоролики</figcaption>
 							</figure>
 							<figure class="sign">
@@ -265,19 +265,25 @@
 	<section>
 		<div class="container">
 			<div class="row">
-				<col-md-12>
+				<div class="col-md-2">
+					<img src="images/user_1.jpg" alt="feedback" class="round">
+				</div>
+				<div class="col-md-9 col-md-offset-1">
 					<a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
-					<p class="basictext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias. Sit atque ipsam quod eaque, eius quaerat sed soluta vero minima nihil distinctio numquam autem, molestiae nobis recusandae. <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum optio totam cum expedita recusandae error iste magni voluptates, impedit maiores officia fuga inventore minus voluptate quaerat id voluptatem dolore eveniet.</span>
-						<span>Suscipit, accusantium consequatur maiores quos impedit id. Similique iure aut qui est nihil libero necessitatibus, optio at illo tenetur minima soluta ad debitis quos nulla nemo, quisquam esse obcaecati facere.</span>
-						<span>Officia ad dicta cumque quod quas voluptates odio laboriosam laudantium ducimus ipsam, inventore voluptatum eveniet aperiam vel architecto animi, veniam tenetur blanditiis sit. Explicabo commodi cum tenetur perferendis numquam, natus?</span>
-						<span>Eum praesentium sunt sed, natus, corporis, corrupti at provident sapiente maiores, quod veniam temporibus. Sapiente vitae culpa nostrum, dignissimos animi, voluptatibus ullam natus iure! Accusantium beatae doloremque ipsa corporis consectetur.</span>
-						<span>Quasi iste excepturi in quo laboriosam quod facere architecto tempora, autem! Neque laborum, dicta. Molestias necessitatibus, neque consectetur aliquid deleniti autem incidunt veritatis quo eveniet laudantium. Error voluptate, in rerum.</span>
-						<span>Quisquam sunt dolorum ut. Obcaecati, facilis, dolor est repellat tempora aliquam nisi ea. Ad hic quia necessitatibus, modi sint blanditiis facere ratione dolorum, quis voluptatem rerum dolorem optio nam accusantium.</span>
-						<span>Minus illo architecto temporibus sint tenetur atque quasi suscipit, aperiam, hic inventore recusandae adipisci. Pariatur, nisi ullam sunt doloribus! Repellat harum, accusamus animi ex id eaque provident ut, porro illo!</span>
-						<span>Id iste esse voluptates consectetur cum soluta aliquid, possimus, quos aspernatur accusamus vero, quis fugit saepe? In vitae facilis delectus adipisci aspernatur dicta consequuntur, rem, reiciendis illo labore error odio.</span>
-						<span>Dolores quam, aspernatur. Sapiente vero ab voluptate molestias laudantium accusamus doloremque error harum tempora delectus incidunt ipsam ipsum culpa maiores, voluptates, id eveniet, ipsa velit, impedit corrupti obcaecati esse. Quia.</span>
-						<span>Molestiae pariatur quidem voluptate, est illum suscipit nostrum corporis adipisci repellat tenetur aspernatur vitae quod error culpa incidunt, nesciunt vel exercitationem. Necessitatibus similique, veritatis eos modi voluptate veniam sapiente sed!</span></p>
-				</col-md-12>
+					<h2>Директор АБН. Марк Иванович</h2>
+					<p class="basictext">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p>			<hr>
+				</div>
+			</div>
+
+						<div class="row">
+				<div class="col-md-2">
+					<img src="images/user_1.jpg" alt="feedback" class="round">
+				</div>
+				<div class="col-md-9 col-md-offset-1">
+					<a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
+					<h2>Директор АБН. Марк Иванович</h2>
+					<p class="basictext">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p>
+				</div>
 			</div>
 		</div>
 	</section>
