--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 				<div class="col-md-9 col-md-offset-1">
 					<a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
 					<h2>Директор АБН. Марк Иванович</h2>
-					<p class="basictext">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p>			<hr>
+					<p class="feedback">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p>			<hr>
 				</div>
 			</div>
 
@@ -282,7 +282,7 @@
 				<div class="col-md-9 col-md-offset-1">
 					<a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
 					<h2>Директор АБН. Марк Иванович</h2>
-					<p class="basictext">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p>
+					<p class="feedback">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p>
 				</div>
 			</div>
 		</div>
