--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							<a href="#">Услуги</a>
 							<ul class="cbp-hssubmenu">
 								<li>
-									<a href="#"><img src="img/radio_g.png" alt="img06"/><span>Аудиролики</span></a>
+									<a href="#"><img src="img/radio_g.png" alt="img06" /><span>Аудиролики</span></a>
 								</li>
 								<li>
 									<a href="#"><img src="img/tv_g.png" alt="img06" /><span>Озвучивание видеороликов</span></a>
@@ -271,11 +271,13 @@
 				<div class="col-md-9 col-md-offset-1">
 					<a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
 					<h2>Директор АБН. Марк Иванович</h2>
-					<p class="feedback">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p>			<hr>
+					<p class="feedback">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, exp
+					licabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p>
+					<hr>
 				</div>
 			</div>
 
-						<div class="row">
+			<div class="row">
 				<div class="col-md-2">
 					<img src="images/user_1.jpg" alt="feedback" class="round">
 				</div>
