Изменен на "переводы"

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					<div class="moveone">
 						<div class="box_blue">
 							<a href="#" class="h1block">ИЗГОТОВЛЕНИЕ СЦЕНАРИЯ
-							<h2 class="h2block">для радио и видеорекламы, написание текстов песен,<br> перевод на иностранные языки</h2></a>
+							<h2 class="h2block">для радио и видеорекламы, написание текстов песен,<br> переводы</h2></a>
 						</div>
 						<div class="rect_blue"></div>
 					</div>
