Lib одновлены и удалено квери меню

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="shortcut icon" href="favicon.png" />
-	<link rel="stylesheet" href="libs/jquerymmenu/jquery.mmenu.all.css" />
 	<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css" />
 	<link rel="stylesheet" href="libs/font-awesome-4.2.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
@@ -31,8 +30,7 @@
 <script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
 <script src="libs/respond/respond.min.js"></script>
 <![endif]-->
-	<script src="libs/jquery/jquery-2.2.0.js"></script>
-	<script src="libs/jquerymmenu/jquery.mmenu.all.min.js"></script>
+	<script src="libs/jquery/jquery-2.2.1.js"></script>
 	<script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
 	<script src="libs/fancybox/jquery.fancybox.pack.js"></script>
 	<script src="libs/waypoints/waypoints-1.6.2.min.js"></script>
@@ -289,6 +287,12 @@
 			</div>
 		</div>
 	</section>
+<footer id="footer">
+	<div class="row">
+		<div class="col-md-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, perferendis quod officiis nam, molestiae quasi esse, recusandae dolor perspiciatis repudiandae magnam ratione. Hic vitae earum, ut, repudiandae libero aut dolore.</div>
+		<div class="col-md-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, perferendis quod officiis nam, molestiae quasi esse, recusandae dolor perspiciatis repudiandae magnam ratione. Hic vitae earum, ut, repudiandae libero aut dolore.</div>
+	</div>
+</footer>
 
 </body>
 
