--- a/index.html
+++ b/index.html
@@ -269,8 +269,7 @@
 				<div class="col-md-9 col-md-offset-1">
 					<a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
 					<h2>Директор АБН. Марк Иванович</h2>
-					<p class="feedback">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, exp
-					licabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p>
+					<p class="feedback">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, exp licabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p>
 					<hr>
 				</div>
 			</div>
@@ -281,18 +280,63 @@
 				</div>
 				<div class="col-md-9 col-md-offset-1">
 					<a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
-					<h2>Директор АБН. Марк Иванович</h2>
-					<p class="feedback">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p>
+					<h2>Директор MANGO-OFFICE. Марк Иванович</h2>
+					<p class="feedback">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p><hr>
+				</div>
+			</div>
+						<div class="row">
+				<div class="col-md-2">
+					<img src="images/user_1.jpg" alt="feedback" class="round">
+				</div>
+				<div class="col-md-9 col-md-offset-1">
+					<a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
+					<h2>Директор FBI. Марк Иванович</h2>
+					<p class="feedback">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p><hr>
 				</div>
 			</div>
 		</div>
 	</section>
-<footer id="footer">
-	<div class="row">
-		<div class="col-md-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, perferendis quod officiis nam, molestiae quasi esse, recusandae dolor perspiciatis repudiandae magnam ratione. Hic vitae earum, ut, repudiandae libero aut dolore.</div>
-		<div class="col-md-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, perferendis quod officiis nam, molestiae quasi esse, recusandae dolor perspiciatis repudiandae magnam ratione. Hic vitae earum, ut, repudiandae libero aut dolore.</div>
-	</div>
-</footer>
+	<footer id="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-5">
+					<h4>Наши принципы:</h4>
+					<p class="coment">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."<hr></p>
+				</div>
+				<div class="col-md-3  col-md-offset-1"><h4>График работы:</h4>
+					По будним дням: 09:00 - 23:00
+					<br> По субботам: 10:00 - 15:00
+					<br> Выходные: воскресенье.</div>
+				<div class="col-md-3"><h4>Контакты:</h4>
+					<b>e-mail:</b> info@sila.fm
+					<br><b>В России:</b> (495) 20-435-20
+					<br><b>В Украине:</b> (044) 545-77-13
+					<br><b>skype:</b> sila.fm
+					<br><b>ICQ:</b> 322-653-493</div>
+			</div>
+			<div class="row">
+			<div class="footer_mn">
+				<ul>
+						<li>
+							<a href="#">Главная</a>
+						</li>
+						<li>
+							<a href="#">Дикторы</a>
+						</li>
+						<li>
+							<a href="#">Услуги</a>
+						</li>
+						<li>
+							<a href="#">Оплата</a>
+						</li>
+						<li>
+							<a href="#">Контакты</a>
+						</li>
+				</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 </body>
 
