--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="shortcut icon" href="favicon.png" />
 	<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css" />
+<!--	<link rel="stylesheet" href="libs/bootstrap/bootstrap.min.css" />-->
 	<link rel="stylesheet" href="libs/font-awesome-4.2.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
 	<link rel="stylesheet" href="libs/owl-carousel/owl.carousel.css" />
@@ -31,6 +32,7 @@
 <script src="libs/respond/respond.min.js"></script>
 <![endif]-->
 	<script src="libs/jquery/jquery-2.2.1.js"></script>
+<!--	<script src="libs/bootstrap/bootstrap.min.js"></script>-->
 	<script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
 	<script src="libs/fancybox/jquery.fancybox.pack.js"></script>
 	<script src="libs/waypoints/waypoints-1.6.2.min.js"></script>
@@ -131,7 +133,8 @@
 			var menu = new cbpHorizontalSlideOutMenu(document.getElementById('cbp-hsmenu-wrapper'));
 		</script>
 	</div>
-	<div class="top_img clearfix">
+
+<div class="top_img clearfix">
 		<p>АУДИОРОЛИКИ, ОЗВУЧКА ВИДЕО,
 			<br> ЗАПИСТЬ ГОЛОСОВ, ВИДЕОРОЛИКИ</p>
 		<div class="center_btn">
