--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<link rel="stylesheet" href="css/fonts.css" />
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="css/media.css" />
+	<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
+
 </head>
 
 <body>
@@ -29,14 +31,17 @@
 <script src="libs/respond/respond.min.js"></script>
 <![endif]-->
 	<script src="libs/jquery/jquery-2.2.1.js"></script>
-<script src="libs/bootstrap/bootstrap.min.js"></script>
+    <script src="libs/bootstrap/bootstrap.min.js"></script>
 	<script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
 	<script src="libs/waypoints/waypoints-1.6.2.min.js"></script>
 	<script src="libs/scrollto/jquery.scrollTo.min.js"></script>
 	<script src="libs/countdown/jquery.plugin.js"></script>
 	<script src="libs/countdown/jquery.countdown.min.js"></script>
 	<script src="libs/countdown/jquery.countdown-ru.js"></script>
-	<script src="libs/landing-nav/navigation.js"></script>
+	<script src="libs/fancybox/jquery.fancybox.pack.js"></script>
+	<!--<script src="libs/landing-nav/navigation.js"></script>-->
+	<!-- Add fancyBox -->
+
 	<script src="js/common.js"></script>
 	<script src="js/modernizr.custom.js"></script>
 	<!-- Yandex.Metrika counter -->
@@ -58,14 +63,13 @@
    					<li><a class="contact" href="#"><span>КОНТАКТЫ</span></a></li>
 
 				</ul>
-<!--появление меню после прокрутки 900 пикселей вниз с фейдом в 400мс -->
+<!--появление меню после прокрутки 700 пикселей вниз с фейдом в 400мс -->
 <script>
 jQuery(function(f){
     var element = f('#navigationMenu');
     f(window).scroll(function(){
-        element['fade'+ (f(this).scrollTop() > 900 ? 'In': 'Out')](400);
+        element['fade'+ (f(this).scrollTop() > 700 ? 'In': 'Out')](400);
     });
-    <script type="javascript" src="Untitled-1.js" />
 });
 </script>
 
@@ -126,7 +130,6 @@ jQuery(function(f){
 								<li>
 									<a href="#"><img src="images/2.png" alt="img02" /><span>Детские голоса</span></a>
 								</li>
-
 							</ul>
 						</li>
 						<li>
@@ -170,27 +173,26 @@ jQuery(function(f){
 		<!--- Слайди--->
 	<div class="carousel-inner">
 	<div class="item active">
-		<img src="img/top_bg.jpg" alt="">
+		<img src="img/img1.jpg" alt="">
 		<div class="carousel-caption">
-					<p>АУДИОРОЛИКИ, ОЗВУЧКА ВИДЕО,<br> ЗАПИСТЬ ГОЛОСОВ, ВИДЕОРОЛИКИ</p>
+					<p>АУДИОРОЛИКИ, <br> ОЗВУЧКА ВИДЕО</p>
 					<div class="center_btn">
 						<button type="button" class="zakaz_btn">СДЕЛАТЬ ЗАКАЗ</button>
 					</div>
 		</div>
 	</div>
 	<div class="item">
-				<img src="img/top2_bg.jpg" alt="">
+				<img src="img/img2.jpg" alt="">
 		<div class="carousel-caption">
-					<p>АУДИОРОЛИКИ, ОЗВУЧКА ВИДЕО,<br> ЗАПИСТЬ ГОЛОСОВ, ВИДЕОРОЛИКИ</p>
+					<p>ОЗВУЧИВАНИЕ ВИДЕРОЛИКОВ</p>
 					<div class="center_btn">
 						<button type="button" class="zakaz_btn">СДЕЛАТЬ ЗАКАЗ</button>
 					</div>
 		</div>
 	</div>
 	<div class="item">
-				<img src="img/top3_bg.jpg" alt="">
+				<img src="img/img3.jpg" alt="">
 		<div class="carousel-caption">
-					<p>АУДИОРОЛИКИ, ОЗВУЧКА ВИДЕО,<br> ЗАПИСТЬ ГОЛОСОВ, ВИДЕОРОЛИКИ</p>
 					<div class="center_btn">
 						<button type="button" class="zakaz_btn">СДЕЛАТЬ ЗАКАЗ</button>
 					</div>
@@ -387,19 +389,26 @@ jQuery(function(f){
 		<div class="container">
 			<div class="row">
 				<div class="col-md-5">
-					<h4>Наши принципы:</h4>
-					<p class="coment">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."<hr></p>
+					<h4>НАШИ ПРИНЦИПЫ:</h4><hr>
+					<p class="coment">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p>
 				</div>
-				<div class="col-md-3  col-md-offset-1"><h4>График работы:</h4>
+				<div class="col-md-3  col-md-offset-1"><h4>ГРАФИК РАБОТЫ:</h4><hr>
 					По будним дням: 09:00 - 23:00
 					<br> По субботам: 10:00 - 15:00
-					<br> Выходные: воскресенье.</div>
-				<div class="col-md-3"><h4>Контакты:</h4>
-					<b>e-mail:</b> info@sila.fm
+					<br> Выходные: воскресенье.
+					<h4>ПОЧТОВЫЙ АДРЕС:</h4><hr>
+				</div>
+				<div class="col-md-3"><h4>КОНТАКТЫ:</h4>
+				<hr>
+					<p><b>e-mail:</b> info@sila.fm
 					<br><b>В России:</b> (495) 20-435-20
 					<br><b>В Украине:</b> (044) 545-77-13
 					<br><b>skype:</b> sila.fm
-					<br><b>ICQ:</b> 322-653-493</div>
+					<br><b>ICQ:</b> 322-653-493</p>
+					<div class="callz">
+					<a href="#callback" class="callzakaz fancybox"> Заказать звонок</a>
+					</div>
+					</div>
 			</div>
 			<div class="row">
 			<div class="footer_mn">
@@ -424,7 +433,15 @@ jQuery(function(f){
 			</div>
 		</div>
 	</footer>
-
+<div class="hidden">
+    <form id="callback" class="pop_form">
+        <h4>Заказать обратный звонок</h4>
+        <input type="text" name="name"  placeholder="Ваше имя..." required /><br>
+        <input type="text" name="phone"  placeholder="Ваш телефон..." required/><br>
+        <input type="text" name="text" size="40" placeholder="Коментарии..."/><br>
+        <button class="callzakaz" type="submit">Заказать</button>
+    </form>
+</div>
 </body>
 
 </html>
