--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="css/media.css" />
 	<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
+	<link rel="icon" type="image/png" href="img/favicon.png" />
 
 </head>
 
@@ -175,7 +176,7 @@ jQuery(function(f){
 	<div class="item active">
 		<img src="img/img1.jpg" alt="">
 		<div class="carousel-caption">
-					<p>АУДИОРОЛИКИ, <br> ОЗВУЧКА ВИДЕО</p>
+					<h1>АУДИОРОЛИКИ </h1>
 					<div class="center_btn">
 						<button type="button" class="zakaz_btn">СДЕЛАТЬ ЗАКАЗ</button>
 					</div>
@@ -184,7 +185,7 @@ jQuery(function(f){
 	<div class="item">
 				<img src="img/img2.jpg" alt="">
 		<div class="carousel-caption">
-					<p>ОЗВУЧИВАНИЕ ВИДЕРОЛИКОВ</p>
+					<h1>ОЗВУЧАНИЕ <br> ВИДЕРОЛИКОВ</h1>
 					<div class="center_btn">
 						<button type="button" class="zakaz_btn">СДЕЛАТЬ ЗАКАЗ</button>
 					</div>
@@ -211,20 +212,6 @@ jQuery(function(f){
 </div>
 
 </section>
-
-
-
-
-
-
-<!--<div class="top_img clearfix">
-		<p>АУДИОРОЛИКИ, ОЗВУЧКА ВИДЕО,
-		<br> ЗАПИСТЬ ГОЛОСОВ, ВИДЕОРОЛИКИ</p>
-		<div class="center_btn">
-			<button type="button" class="zakaz_btn">СДЕЛАТЬ ЗАКАЗ</button>
-		</div>
-</div>-->
-
 
 
 
@@ -432,6 +419,7 @@ jQuery(function(f){
 				</div>
 			</div>
 		</div>
+	<div id="scrollup"><img alt="Прокрутить вверх" src="/img/up.svg"></div>
 	</footer>
 <div class="hidden">
     <form id="callback" class="pop_form">
