--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="description" content="" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="shortcut icon" href="favicon.png" />
+	<link rel="icon" type="image/png" href="img/favicon.png" />
 	<link rel="stylesheet" href="libs/bootstrap/bootstrap.css"/>
 	<link rel="stylesheet" href="libs/font-awesome-4.2.0/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="libs/countdown/jquery.countdown.css" />
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="css/media.css" />
 	<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
-	<link rel="icon" type="image/png" href="img/favicon.png" />
+
 
 </head>
 
@@ -114,22 +114,22 @@ jQuery(function(f){
 							<a href="#">Дикторы</a>
 							<ul class="cbp-hssubmenu">
 								<li>
-									<a href="#"><img src="images/7.png" alt="img07" /><span>Русские дикторы</span></a>
+									<a href="#"><img src="img/ruman.png" alt="img07" /><span>Русские дикторы</span></a>
 								</li>
 								<li>
-									<a href="#"><img src="images/8.png" alt="img08" /><span>Украинские дикторы</span></a>
+									<a href="#"><img src="img/uaman.png" alt="img08" /><span>Украинские дикторы</span></a>
 								</li>
 								<li>
-									<a href="#"><img src="images/9.png" alt="img09" /><span>Иностранные дикторы</span></a>
+									<a href="#"><img src="img/foreigner.png" alt="img09" /><span>Иностранные дикторы</span></a>
 								</li>
 								<li>
-									<a href="#"><img src="images/10.png" alt="img10" /><span>Вокалисты</span></a>
+									<a href="#"><img src="img/songer.png" alt="img10" /><span>Вокалисты</span></a>
 								</li>
 								<li>
-									<a href="#"><img src="images/1.png" alt="img01" /><span>Пародисты</span></a>
+									<a href="#"><img src="img/parodies.png" alt="img01" /><span>Пародисты</span></a>
 								</li>
 								<li>
-									<a href="#"><img src="images/2.png" alt="img02" /><span>Детские голоса</span></a>
+									<a href="#"><img src="img/child.png" alt="img02" /><span>Детские голоса</span></a>
 								</li>
 							</ul>
 						</li>
@@ -137,16 +137,16 @@ jQuery(function(f){
 							<a href="#">Услуги</a>
 							<ul class="cbp-hssubmenu">
 								<li>
-									<a href="#"><img src="img/radio_g.png" alt="img06" /><span>Аудиролики</span></a>
+									<a href="#"><img src="img/radio_c.png" alt="img06" /><span>Аудиролики</span></a>
 								</li>
 								<li>
-									<a href="#"><img src="img/tv_g.png" alt="img06" /><span>Озвучивание видеороликов</span></a>
+									<a href="#"><img src="img/tv_c.png" alt="img06" /><span>Озвучивание видеороликов</span></a>
 								</li>
 								<li>
-									<a href="#"><img src="img/film_g.png" alt="img09" /><span>Создание видеороликов</span></a>
+									<a href="#"><img src="img/film_c.png" alt="img09" /><span>Создание видеороликов</span></a>
 								</li>
 								<li>
-									<a href="#"><img src="img/gramafon_g.png" alt="img09" /><span>Музыкальные подложки</span></a>
+									<a href="#"><img src="img/vinil.png" alt="img09" /><span>Музыкальные подложки</span></a>
 								</li>
 							</ul>
 						</li>
@@ -176,7 +176,7 @@ jQuery(function(f){
 	<div class="item active">
 		<img src="img/img1.jpg" alt="">
 		<div class="carousel-caption">
-					<h1>АУДИОРОЛИКИ </h1>
+					<h1>АУДИОРОЛИКИ</h1>
 					<div class="center_btn">
 						<button type="button" class="zakaz_btn">СДЕЛАТЬ ЗАКАЗ</button>
 					</div>
@@ -194,6 +194,7 @@ jQuery(function(f){
 	<div class="item">
 				<img src="img/img3.jpg" alt="">
 		<div class="carousel-caption">
+
 					<div class="center_btn">
 						<button type="button" class="zakaz_btn">СДЕЛАТЬ ЗАКАЗ</button>
 					</div>
@@ -277,7 +278,7 @@ jQuery(function(f){
 					<div class="moveone">
 						<div class="box_yellow">
 							<a href="#" class="h1block">ОЗВУЧАНИЕ<br> ВИДЕОРОЛИКОВ
-							<h2 class="h2block">cинхрон, липсинг, дубляж, закадровый голос, субтитры</h2></a>
+							<h2 class="h2block">cинхрон, липсинг, <br> закадровый голос, субтитры</h2></a>
 						</div>
 						<div class="rect_r"></div>
 						<div class="rect_yel_r"></div>
@@ -384,6 +385,7 @@ jQuery(function(f){
 					<br> По субботам: 10:00 - 15:00
 					<br> Выходные: воскресенье.
 					<h4>ПОЧТОВЫЙ АДРЕС:</h4><hr>
+					<p>г. Москва, пер. Электрический д.12 помещение ІІ, комн. 6</p>
 				</div>
 				<div class="col-md-3"><h4>КОНТАКТЫ:</h4>
 				<hr>
