--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                         <div class="col-md-8 col-sm-7 hidden-xs">
                             <div class="top_contact">
-                                <i class="fa fa-phone"></i> 8-800-200-20-20
+                               <i class="fa fa-mobile" aria-hidden="true"></i> (495) 20-435-20
                             </div>
                         </div>
                         <div class="col-md-2 col-sm-2 col-xs-8">
@@ -98,6 +98,7 @@
                                 <a href="#"><i class="fa fa-vk"></i></a>
                                 <a href="#"><i class="fa fa-facebook-square"></i></a>
                                 <a href="#"><i class="fa fa-skype"></i></a>
+                                <a href="#"> <i class="fa fa-twitter" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
@@ -111,7 +112,7 @@
                                 <a href="#">Главная</a>
                             </li>
                             <li>
-                                <a href="#">Дикторы</a>
+                                <a href="index_01.html">Дикторы</a>
                                 <ul class="cbp-hssubmenu">
                                     <li>
                                         <a href="#"><img src="img/ruman.png" alt="img07" /><span>Русские дикторы</span></a>
@@ -270,7 +271,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                   <div class="miniblock">
-                        <div class="green">
+                        <div class="grn">
                         <h3>Озвучание видео</h3></div>
                        <ol class="quikblock">
                         <li> &nbsp;Закадровый голос</li>
@@ -440,10 +441,7 @@
                     <p class="feedback">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p>
                     <hr>
                 </div>
-                <div class="row">
-                   <div class="col-md-12"><h2>Наши клиенты</h2></div>
 
-                </div>
             </div>
         </div>
         </div>
@@ -462,10 +460,10 @@
 
                     <ul>
                         <li>
-                            <a href="#">Главная</a>
+                            <a href="index.html">Главная</a>
                         </li>
                         <li>
-                            <a href="#">Дикторы</a>
+                            <a href="index_01.html">Дикторы</a>
                         </li>
                         <li>
                             <a href="#">Услуги</a>
@@ -498,13 +496,13 @@
                         <br><b>skype:</b> sila.fm
                         <br><b>ICQ:</b> 322-653-493</p>
                     <div class="callz">
-                        <a href="#callback" class="callzakaz fancybox"> Заказать звонок</a>
+                        <a href="#callback" class="callzakaz fancybox"> Заказать звонок </a>
                     </div>
                 </div>
             </div>
 
         </div>
-        <div id="scrollup"><img alt="Прокрутить вверх" src="/img/up.svg"></div>
+        <div id="scrollup"><img alt="Прокрутить вверх" src="../img/up.png"></div>
 
     <div class="hidden">
         <form id="callback" class="pop_form">
