impove GUI dictors

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                     </div>
                 </div>
             </div>
+
+
+
             <div class="mnu">
                 <nav class="cbp-hsmenu-wrapper" id="cbp-hsmenu-wrapper">
                     <div class="cbp-hsinner">
@@ -115,22 +118,22 @@
                                 <a href="index_01.html">Дикторы</a>
                                 <ul class="cbp-hssubmenu">
                                     <li>
-                                        <a href="#"><img src="img/ruman.png" alt="img07" /><span>Русские дикторы</span></a>
+                                        <a href="index_01.html#ex1"><img src="img/ruman.png" alt="img07" id="dic"/><span>Русские дикторы</span></a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="img/uaman.png" alt="img08" /><span>Украинские дикторы</span></a>
+                                        <a href="index_01.html#ex5"><img src="img/uaman.png" alt="img08" /><span>Украинские дикторы</span></a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="img/foreigner.png" alt="img09" /><span>Иностранные дикторы</span></a>
+                                        <a href="index_01.html#ex3"><img src="img/foreigner.png" alt="img09" /><span>Иностранные дикторы</span></a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="img/songer.png" alt="img10" /><span>Вокалисты</span></a>
+                                        <a href="index_01.html#ex9"><img src="img/songer.png" alt="img10" /><span>Вокалисты</span></a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="img/parodies.png" alt="img01" /><span>Пародисты</span></a>
+                                        <a href="index_01.html#ex8"><img src="img/parodies.png" alt="img01" /><span>Пародисты</span></a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="img/child.png" alt="img02" /><span>Детские голоса</span></a>
+                                        <a href="index_01.html#ex7"><img src="img/child.png" alt="img02" /><span>Детские голоса</span></a>
                                     </li>
                                 </ul>
                             </li>
@@ -325,7 +328,7 @@
                     <div class="col-md-12">
                         <div class="moveone">
                             <div class="box_red">
-                                <a href="#" class="h1block">ЗАПИСЬ ДИКТОРА
+                                <a href="index_01.html" class="h1block">ЗАПИСЬ ДИКТОРА
 								<h2 class="h2block">федеральные дикторы, актеры дубляжа, киноактеры,<br> пародисты, иностранные дикторы носители языка, вокалисты</h2></a>
                             </div>
                             <div class="rect_red"></div>
