--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
             </div>
 
         </div>
-        <div id="scrollup"><img alt="Прокрутить вверх" src="../img/up.png"></div>
+        <div id="scrollup"><img alt="Прокрутить вверх" src="img/up.png"></div>
 
     <div class="hidden">
         <form id="callback" class="pop_form">
