--- a/index.html
+++ b/index.html
@@ -116,26 +116,6 @@
                             </li>
                             <li>
                                 <a href="index_01.html">Дикторы</a>
-                                <ul class="cbp-hssubmenu">
-                                    <li>
-                                        <a href="index_01.html#ex1"><img src="img/ruman.png" alt="img07" id="dic"/><span>Русские дикторы</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="index_01.html#ex5"><img src="img/uaman.png" alt="img08" /><span>Украинские дикторы</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="index_01.html#ex3"><img src="img/foreigner.png" alt="img09" /><span>Иностранные дикторы</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="index_01.html#ex9"><img src="img/songer.png" alt="img10" /><span>Вокалисты</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="index_01.html#ex8"><img src="img/parodies.png" alt="img01" /><span>Пародисты</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="index_01.html#ex7"><img src="img/child.png" alt="img02" /><span>Детские голоса</span></a>
-                                    </li>
-                                </ul>
                             </li>
                             <li>
                                 <a href="#">Услуги</a>
@@ -303,8 +283,8 @@
                     </div>
                     <div class="col-md-9 col-sm-12">
                         <a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
-                        <p class="basictext"><span style="font-family:'RobotoRegular'">Агентство Звука Сила.ФМ</span> оказывает услуги: изготовление аудиороликов и радиороликов, озвучивание видеороликов, озвучка фильмов, анимации, корпоративного видео, запись аудиорекламы, радиорекламы.
-                            <br> Принцип работы &mdash; удаленное on-line сотрудничество с заказчиками аудиорекламы, видеороликов и радиороликов. Отправка заказа по электронной почте или в ЛИЧНЫЙ КАБИНЕТ. Сроки исполнения &mdash; от 1 часа до 1 рабочего дня. Заказчики &mdash; рекламные и медиабаинговые агентства, радиостанции, торговые марки и бренды, телеканалы, рекламные компании, видеостудии, интернет-компании, продакшн-студии, звукорежиссеры, рекламные и маркетинговые отделы компаний, провайдеры, кинотеатры, супермаркеты.
+                        <p class="basictext"><span style="font-family:'RobotoRegular'">Агентство Звука Сила.ФМ</span> оказывает услуги: изготовление аудиороликов и радиороликов, озвучивание видеороликов, озвучка фильмов, анимации, корпоративного видео, запись аудиорекламы, радиорекламы.<br>
+                        Принцип работы &mdash; удаленное on-line сотрудничество с заказчиками аудиорекламы, видеороликов и радиороликов. Отправка заказа по электронной почте или в ЛИЧНЫЙ КАБИНЕТ. Сроки исполнения &mdash; от 1 часа до 1 рабочего дня. Заказчики &mdash; рекламные и медиабаинговые агентства, радиостанции, торговые марки и бренды, телеканалы, рекламные компании, видеостудии, интернет-компании, продакшн-студии, звукорежиссеры, рекламные и маркетинговые отделы компаний, провайдеры, кинотеатры, супермаркеты.</p>
                         </p>
                     </div>
                 </div>
