--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <a href="#">Услуги</a>
                                 <ul class="cbp-hssubmenu">
                                     <li>
-                                        <a href="#"><img src="img/radio_c.png" alt="img06" /><span>Аудиролики</span></a>
+                                        <a href="index_02.html"><img src="img/radio_c.png" alt="img06" /><span>Аудиролики</span></a>
                                     </li>
                                     <li>
                                         <a href="#"><img src="img/tv_c.png" alt="img06" /><span>Озвучивание видеороликов</span></a>
@@ -282,7 +282,7 @@
                         </div>
                     </div>
                     <div class="col-md-9 col-sm-12">
-                        <a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
+                           <a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
                         <p class="basictext"><span style="font-family:'RobotoRegular'">Агентство Звука Сила.ФМ</span> оказывает услуги: изготовление аудиороликов и радиороликов, озвучивание видеороликов, озвучка фильмов, анимации, корпоративного видео, запись аудиорекламы, радиорекламы.<br>
                         Принцип работы &mdash; удаленное on-line сотрудничество с заказчиками аудиорекламы, видеороликов и радиороликов. Отправка заказа по электронной почте или в ЛИЧНЫЙ КАБИНЕТ. Сроки исполнения &mdash; от 1 часа до 1 рабочего дня. Заказчики &mdash; рекламные и медиабаинговые агентства, радиостанции, торговые марки и бренды, телеканалы, рекламные компании, видеостудии, интернет-компании, продакшн-студии, звукорежиссеры, рекламные и маркетинговые отделы компаний, провайдеры, кинотеатры, супермаркеты.</p>
                         </p>
